--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container"></div>
     <button id="reset">reset</button>
+    <button id="configure">configure</button>
 
 </body>
 
