--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
 </head>
-
 <body>
-    <div class="container"></div>
-    <button id="reset">reset</button>
-    <button id="configure">configure</button>
+    <h1>Scratch Odin Project</h1>
+    <div class="container">
+    
+    </div>
+
+    <div class="buttonContainer">    
+        <button id="createGrid">Create Grid</button>
+        <button id="clear">Clear</button>
+    </div>
 
 </body>
-
 </html>
